frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: title
spec:
  selector:
    app: title
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
